istio/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: soak-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    owner: zerok
    type: soak 

---

apiVersion: v1
kind: Service
metadata:
  name: spill-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    owner: zerok
    type: spill
