istio/soak.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: zerok-soak
  namespace: default
spec:
  workloadSelector:
    labels:
      owner: zerok
      type: soak 
  configPatches:

  - applyTo: HTTP_FILTER
    match:
      context: ANY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.tap
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap
          common_config:
            static_config:
              match_config:
                http_response_headers_match: 
                  headers:
                  - name: ":status"
                    string_match:
                      exact: "200"
              output_config:
                sinks:
                  - format: PROTO_TEXT
                    file_per_tap:
                      path_prefix: /var/log/


  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.local_ratelimit
        typed_config:
          "@type": type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          value:
            stat_prefix: http_local_rate_limiter

  - applyTo: ROUTE_CONFIGURATION
    match:
      context: ANY
    patch:
      operation: MERGE
      value:
        response_headers_to_add: 
          - append: true
            append_action: APPEND_IF_EXISTS_OR_ADD
            header:
              key: ZEROK-TARGET
              value: 'soak'

  - applyTo: HTTP_ROUTE
    match:
      context: SIDECAR_INBOUND
    patch:
      operation: MERGE
      value:
        typed_per_filter_config:
          envoy.filters.http.local_ratelimit:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            value:
              stat_prefix: http_local_rate_limiter
              filter_enabled:
                runtime_key: local_rate_limit_enabled
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              filter_enforced:
                runtime_key: local_rate_limit_enforced
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              response_headers_to_add:
                - append: false
                  header:
                    key: x-local-rate-limit
                    value: 'true'
                - append: true
                  append_action: APPEND_IF_EXISTS_OR_ADD
                  header:
                    key: ZEROK-TARGET
                    value: 'soak-rate-limited'
              token_bucket:
                max_tokens: 1
                tokens_per_fill: 1
                fill_interval: 1s
